--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,7 @@ html {
 
 body {
     font-family: Exo, Arial;
-    background-color: rgb(91, 94, 166);
+    background-color: white;
     padding-top: 80px;
     margin: 0;
 }
