--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,7 @@
     height: 60px;
     padding: 0 25px;
     border-bottom: 1px solid black;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(220, 95, 0);
     box-shadow: 0px 15px 10px -15px rgba(0, 0, 0);
 }
 
@@ -35,5 +35,5 @@
 }
 
 .header-link:hover, .title:hover {
-    color: rgb(92, 123, 225);
+    color: white;
 }
