--- a/styles/skillset.css
+++ b/styles/skillset.css
@@ -3,7 +3,7 @@
     height: 400;
     left: 0;
     right: 0;
-    background-color: black;
+    background-color: rgb(55, 58, 64);
     color: white;
     padding: 30px 40px;
 }
@@ -17,15 +17,9 @@
 
 .skill-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    column-gap: 25px;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 20px;
     row-gap: 25px;
-}
-
-@media (max-width: 1200px) {
-    .skill-grid {
-        grid-template-columns: repeat(4, 1fr);
-    }
 }
 
 @media (max-width: 960px) {
@@ -41,11 +35,10 @@
 }
 
 .skill-container {
-    border: 4px solid white;
+    border: 4px solid rgb(104, 109, 118);
     border-radius: 15px;
-    height: 300px;
-    width: auto;
     padding: 20px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     transition: 0.3s;
@@ -57,22 +50,14 @@
 
 .skill-title {
     font-weight: bold;
-    font-size: 20px;
-    text-align: center;
-}
-
-hr {
-    width: 100%;
-}
-
-.skill-description {
-    margin: 15px 0;
-    height: 200px;
+    font-size: 24px;
+    padding-left: 10px;
+    margin-bottom: 10px;
 }
 
 .skill-bar {
     width: 100%;
-    background-color: white;
+    background-color: rgb(104, 109, 118);
     border-radius: 12px;
 }
 
@@ -80,9 +65,9 @@ hr {
     text-align: right;
     font-weight: bold;
     padding: 2px 5px;
-    color: black;
+    color: white;
     border-radius: 12px;
-    background-color: gold;
+    background-color: rgb(220, 95, 0);
 }
 
 .c-plus, .java {
