--- a/styles/skillset.css
+++ b/styles/skillset.css
@@ -64,8 +64,8 @@
 .skills {
     text-align: right;
     font-weight: bold;
-    padding: 2px 5px;
-    color: white;
+    padding: 2px 8px;
+    color: black;
     border-radius: 12px;
     background-color: rgb(220, 95, 0);
 }
