--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -192,3 +192,13 @@
         height: 6px;
     }
 }
+
+@media (max-width: 505px) {
+    .about {
+        margin: 50px 30px;
+    }
+    .about-skill p {
+        min-width: 90px;
+        font-size: 18px;
+    }
+}
