--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -152,3 +152,15 @@
         font-size: 20px;
     }
 }
+
+@media (max-width: 505px) {
+    .contact {
+        margin: 50px 30px;
+    }
+    .contact-right input {
+        width: 95%;
+    }
+    .contact-right textarea {
+        width: 88%;
+    }
+}
