--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -22,7 +22,7 @@
 
 .footer-top-left p {
     font-size: 20px;
-    max-width: 400px;
+    width: 400px;
 }
 
 .footer-top-right {
@@ -84,11 +84,33 @@
         gap: 25px;
     }
     .footer-top-left p {
-        max-width: 80%;
+        width: 80%;
     }
     .footer-bottom {
         display: flex;
         flex-direction: column-reverse;
         gap: 10px;
+    }
+}
+
+@media (max-width: 505px) {
+    .footer {
+        margin: 50px 30px;
+    }
+    .footer-top-left p {
+        width: 100%;
+    }
+    .footer-top-right {
+        flex-direction: column;
+        align-items: start;
+    }
+    .footer-email-input {
+        width: 75%;
+    }
+    .footer-bottom-left {
+        font-size: 18px;
+    }
+    .footer-bottom-right {
+        gap: 25px;
     }
 }
