--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -75,3 +75,13 @@
         margin: 20px auto 60px;
     }
 }
+
+@media (max-width: 505px) {
+    .portfolio {
+        margin: 50px 30px;
+    }
+    .mywork-showmore {
+        margin: 5px auto 60px;
+        font-size: 16px;
+    }
+}
