--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -43,7 +43,7 @@
 
 .nav-menu li div {
     padding-bottom: 10px;
-    border-bottom: 4px solid black;
+    border-bottom: 4px solid rgba(0, 0, 0, 1);
 }
 
 .nav-menu li:hover {
@@ -95,12 +95,12 @@
         align-items: start;
         top: 0;
         gap: 30px;
-        background-color: rgb(44, 44, 44);
-        width: 350px;
+        background-color: rgba(44, 44, 44, 0.9);
+        width: 300px;
         height: 100%;
         z-index: 2;
         transition: right 0.5s;
-        right: -350px;
+        right: -300px;
     }
     .nav-menu li {
         font-size: 26px;
@@ -109,7 +109,7 @@
         gap: 20px;
     }
     .nav-menu li div {
-        border-color: rgb(44, 44, 44);
+        border-color: rgba(44, 44, 44, 0.9);
     }
     .nav-mob-open {
         display: block;
@@ -122,7 +122,7 @@
         display: block;
         position: relative;
         top: 30px;
-        left: 290px;
+        left: 240px;
         width: 30px;
         font-size: 32px;
         cursor: pointer;
