--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -33,12 +33,16 @@
     border: 4px solid white;
 }
 
-.mywork-showmore {
+.mywork-showmore a {
     display: flex;
+    align-items: center;
+    gap: 5px;
     border-radius: 50px;
     border: 4px solid white;
     padding: 20px 40px;
     font-size: 18px;
+    text-decoration: none;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-weight: bold;
@@ -47,7 +51,7 @@
     transition: 0.6s;
 }
 
-.mywork-showmore:hover {
+.mywork-showmore a:hover {
     background-color: white;
     color: black;
 }
