--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -129,30 +129,48 @@
     font-family: Playwrite CZ;
 }
 
-.about-skill {
+.skill-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 20px;
+}
+
+.skill-box {
     display: flex;
-    gap: 50px;
-    align-items: center;
-    transition: 0.3s;
+    flex-direction: column;
+    gap: 20px;
+    border: 5px solid rgb(97, 95, 95);
+    border-radius: 15px;
+    padding: 20px 25px;
+    box-sizing: border-box;
+    transition: 0.4s;
 }
 
-.about-skill p {
-    min-width: 150px;
-    font-size: 20px;
-    font-weight: bold;
+.skill-box:hover {
+    transform: scale(1.10);
 }
 
-.about-skill hr {
-    outline: none;
-    border: none;
-    width: 50%;
-    height: 8px;
+.skill-box h3 {
+    font-size: 21px;
+    letter-spacing: 1px;
+    padding-left: 5px;
+} 
+
+.skill-box .skill-level-cont {
+    width: 100%;
     border-radius: 50px;
-    background: linear-gradient(90deg, teal 30% , green, lightgreen);
+    background: rgb(61, 61, 61);
 }
 
-.about-skill:hover {
-    transform: scale(1.05);
+.skill-box .skill-level-cont .skill-bar {
+    text-align: right;
+    background: linear-gradient(-45deg, teal 30%, lime);
+    border-radius: 50px;
+    padding-right: 15px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .quote {
@@ -184,9 +202,8 @@
     .about-para {
         line-height: 32px;
     }
-    .about-skill {
-        gap: 20px;
-        align-items: center;
+    .skill-container {
+        grid-template-columns: 1fr 1fr;
     }
     .about-skill hr {
         height: 6px;
@@ -197,8 +214,8 @@
     .about {
         margin: 50px 30px;
     }
-    .about-skill p {
-        min-width: 90px;
-        font-size: 15px;
+    .skill-box {
+        padding: 15px;
+        gap: 15px;
     }
 }
