--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     justify-content: center;
     gap: 55px;
     margin: 80px 170px;
@@ -14,23 +15,111 @@
     font-weight: bold;
 }
 
-.mywork-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
+.portfolio-para {
+    font-size: 22px;
+    font-weight: 500;
+    color: rgb(165, 164, 164);
 }
 
-.mywork-container img {
-    box-sizing: border-box;
-    width: 600px;
-    border-radius: 20px;
+.mywork-container {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 55vh;
+    overflow: hidden;
+}
+
+.mywork-container section {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    gap: 50px;
+    opacity: 0;
+    transition: all 0.5s linear;
+}
+
+section.activeSlide {
+    opacity: 1;
+    transform: translateX(0);
+  }
+section.lastSlide {
+    transform: translateX(-100%);
+  }
+section.nextSlide {
+    transform: translateX(100%);
+  }
+
+.mywork-container section img {
+    width: 55vw;
+    border-radius: 12px;
+}
+
+.mywork-container section .project-details {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    padding: 40px 0;
+}
+
+.mywork-container section h2 {
+    font-size: 32px;
+    letter-spacing: 1px;
+}
+
+.mywork-container section p {
+    font-size: 18px;
+}
+
+.mywork-container section a {
+    text-decoration: none;
+    padding: 15px 32px;
+    font-family: Pacifico;
+    font-size: 25px;
+    font-weight: 500;
+    border-radius: 50px;
+    color: black;
+    background: linear-gradient(-45deg, teal 30%, lime);
+    width: 150px;
     transition: 0.3s;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+.mywork-container section a:active {
+    transform: scale(1.15);
+}
+
+.portfolio .button-cont {
+    display: flex;
+    gap: 20px;
+    margin: auto;
+}
+
+.portfolio .prev,
+.portfolio .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: linear-gradient(-55deg, teal 30%, lime);
+    padding: 80px 20px;
+    font-size: 25px;
+    border: none;
+    border-radius: 50px;
     cursor: pointer;
 }
 
-.mywork-container img:hover {
-    transform: scale(1.05);
-    border: 4px solid white;
+.portfolio .prev {
+    left: 0;
+    margin-left: -100px;
+}
+
+.portfolio .next {
+    right: 0;
+    margin-right: -100px;
 }
 
 .mywork-showmore a {
@@ -66,18 +155,34 @@
         padding: 0;
     }
     .mywork-container {
-        grid-template-columns: 1fr;
-        gap: 30px;
+        height: 70vh;
     }
-    .mywork-container img {
+    .mywork-container section {
+        flex-direction: column;
+        gap: 30px;    
+    }
+    .mywork-container section img {
         width: 100%;
-        height: 100%;
+    }
+    .mywork-container ,.project-details {
+        gap: 20px;
+    }
+    .portfolio .prev, .portfolio .next {
+        padding: 50px 15px;
+        font-size: 18px;
+    }
+    .portfolio .prev {
+        margin-left: -60px;
+    }
+    .portfolio .next {
+        margin-right: -60px;
     }
     .mywork-showmore {
         padding: 20px 40px;
         font-size: 18px;
         margin: 20px auto 60px;
     }
+
 }
 
 @media (max-width: 505px) {
@@ -85,7 +190,13 @@
         margin: 50px 30px;
     }
     .mywork-showmore {
-        margin: 5px auto 60px;
+        margin: -35px auto 60px;
         font-size: 16px;
+    }
+    .portfolio .prev, .portfolio .next {
+        margin-left: 0;
+        margin-right: 0;
+        padding: 15px 18px;
+        position: relative;
     }
 }
